[package]
name = "bintools"
version = "0.3.1"
authors = ["Jason Wang <12841205+bestwbr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3"
sha2 = "0.9"
hex = "0.4"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
